--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -28,5 +28,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: |
-          python -m unittest discover tests
+        run: pytest
