--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,34 @@
-pandas
-numpy
-matplotlib
-seaborn
-nltk
-textblob
-vaderSentiment
-scikit-learn
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.58.1
+idna==3.10
+iniconfig==2.1.0
+joblib==1.5.1
+kiwisolver==1.4.8
+matplotlib==3.10.3
+nltk==3.9.1
+numpy==2.2.6
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
+pluggy==1.6.0
+pyparsing==3.2.3
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+regex==2024.11.6
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.3
+seaborn==0.13.2
+six==1.17.0
+textblob==0.19.0
+threadpoolctl==3.6.0
+tqdm==4.67.1
+tzdata==2025.2
+urllib3==2.4.0
+vaderSentiment==3.3.2
